<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/lined"
    android:paddingBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/savedBusinessName"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/DefaultName"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/very_dark_blue"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/savedBusinessPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/savedBusinessPhone"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/DefaultPhoneNumber"
        android:textColor="@color/very_dark_blue"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/savedBusinessCity"
        app:layout_constraintStart_toEndOf="@+id/savedBusinessName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/savedBusinessCity"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/DefaultCity"
        android:textColor="@color/very_dark_blue"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/savedBusinessAddress"
        app:layout_constraintStart_toEndOf="@+id/savedBusinessPhone"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/savedBusinessAddress"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/DefaultAddress"
        android:textColor="@color/blue"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/removeBusiness"
        app:layout_constraintStart_toEndOf="@+id/savedBusinessCity"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/removeBusiness"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="sans-serif"
        android:padding="0dp"
        android:text="@string/Remove"
        android:textSize="11sp"
        app:backgroundTint="@color/very_light_blue"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/savedBusinessAddress"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

