<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:id="@+id/scrollViewPurposeText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/nextButtonPurpose"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/purposeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/Purpose"
                android:textColor="@color/very_dark_blue"
                android:textSize="20sp" />

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextButtonPurpose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/End"
            android:textColor="@color/white"
            app:cornerRadius="30dp"
            app:backgroundTint="@color/dark_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollViewPurposeText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/previousButtonPurpose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="300dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/Back"
            android:textColor="@color/white"
            app:cornerRadius="30dp"
            app:backgroundTint="@color/dark_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollViewPurposeText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>